--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -154,6 +154,7 @@
 	  <tr>
 	    <td>1/19
 	    <td>Sandboxing and isolation<br>
+	      <br><a href="slides/5-isolation.pdf">Lecture slides</a>
 	    <td>
 	      <a href="https://cseweb.ucsd.edu/~dstefan/noindex/login2020/">The Road to Less Trusted Code: Lowering the Barrier to In-process Sandboxing</a> by Tal Garfinkel, Shravan Narayan, Craig Disselkoen, Hovav Shacham, and Deian Stefan<br>
 	      
