--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -164,7 +164,13 @@
 	      <a href="https://www.apple.com/business/docs/iOS_Security_Guide.pdf">iOS Security Guide</a>
 	    <td>
 	  </tr>
-
+	  <tr>
+	    <td>1/20
+	    <td>Discussion: Assignment 2<br>
+	    <td><a href=slides/discussion_slides/week_3_discussion.pdf>Discussion 3 Slides</a><br>
+			<a href=slides/discussion_slides/sploit4.pdf>sploit4 Supplemental Slides</a>
+		<td>
+	  </tr>
 	  <tr>
 	    <td>1/21
 	    <td>Side channels<br>
