Added pa3 writeup

--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -177,7 +177,7 @@
 
 	    <td>
 
-	    <td>
+	    <td><a href="pa/pa3.html">Assignment 3 available</a>
 	  </tr>
       <tr>
         <td>1/23
@@ -211,12 +211,18 @@
 <a href="https://code.google.com/p/browsersec/wiki/Part1">Browser Security Handbook: Basic concepts behind web browsers</a><br>
 	    <td>
 	  </tr>
-
+      <tr>
+        <td>1/31
+        <td>
+        <td>
+        <td><a href="pa/pa3.html">Assignment 3 due</a>
+      </tr>
 	  <tr>
 	    <td>2/2
 	    <td>Web attacks and defenses<br>
 
 	    <td><a href="https://cseweb.ucsd.edu/~dstefan/cse127-fall20/papers/csrf.pdf">Robust defenses for cross-site request forgery</a> by Adam Barth, Collin Jackson, and John C. Mitchell<br>
+	  	<td>
 	  </tr>
 
 	  <tr>
