side channel slides

--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -174,7 +174,7 @@
 	  <tr>
 	    <td>1/21
 	    <td>Side channels<br>
-
+	      <br><a href="slides/6-sidechannels.pdf">Lecture slides</a>
 	    <td>
 
 	    <td><a href="pa/pa3.html">Assignment 3 available</a>
