update scribe notes directions

--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -387,6 +387,10 @@
 
 <p>You will also be tasked with writing a set of lecture notes for one lecture during the quarter, in collaboration with 6 or 7 of your fellow students.  Think of this as a short summary of the lecture, written in complete prose sentences, that should be understandable to a student who missed that class.  There is no perfect textbook for this course, so we will share these scribe notes with your fellow students to help as a study aide.</p>
 
+    <p>Your scribe notes should be written in LaTeX.  The first draft of your notes will be due two weeks from the lecture date.  There is no extra credit for early turn-in, since we expect a few rounds of editing.  You should submit both a PDF version of the notes as well as the source files to Gradescope.  We will give feedback and continue iterating on edits until your notes are in good shape, and then we will post them to Canvas.</p>
+
+    <p>The draft that you turn in should be reasonably polished.  This means that everyone in your group should make copy-editing, clarification, and organizational passes on everyone else's writing so that your notes read as a coherent whole.  If you include images or diagrams that are in the lecture notes that were pulled from another source originally, you should add a citation to that source using bibtex, and your notes will have a bibliography section at the end.  You may also need to refer to some of the readings or other materials to clarify, fix, or fill out additional details about what was covered in lecture; if you do this you should also cite your sources.</p>
+
 <p>As motivational examples, David Wagner from Berkeley has written some beautiful lecture notes for some of the topics covered by this class that are longer than you need to write.  <a href="https://sp20.cs161.org/assets/notes/MemorySafety.1.24.pdf">Here</a> is an example. A more typical example might be <a href="https://www.cs.princeton.edu/courses/archive/spring08/cos511/scribe_notes/0428.pdf">these</a> scribe notes produced long ago for a random class when your professor was still a student.</p>
 
 <hr><a NAME="resources"></a>
