--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -206,7 +206,7 @@
 	  <tr>
 	    <td>1/28
 	    <td>Web intro<br>
-	      <br><a href="slides/8-webintro.pdf">Lecture slides</a>
+	      <br><a href="slides/8-webmodel.pdf">Lecture slides</a>
 	      <br>
 	    <td>
 	      <a href="https://cseweb.ucsd.edu/~dstefan/cse127-winter19/notes/lecture13/"> CSRF, XSS, SQLi notes</a><br>
