lecture 9 slides link

--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -226,7 +226,7 @@
 	  <tr>
 	    <td>2/2
 	    <td>Web attacks and defenses<br>
-
+	      <br><a href="slides/9-webattacks.pdf">Lecture slides</a>
 	    <td><a href="https://cseweb.ucsd.edu/~dstefan/cse127-fall20/papers/csrf.pdf">Robust defenses for cross-site request forgery</a> by Adam Barth, Collin Jackson, and John C. Mitchell<br>
 	  	<td>
 	  </tr>
