--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -234,6 +234,7 @@
 	  <tr>
 	    <td>2/4
 	    <td>Network intro<br>
+	      <br><a href="slides/10-networkintro.pdf">Lecture slides</a>
 	    <td>
 	      <i>Optional further reading:</i><br>
 	      <a href="http://en.wikipedia.org/wiki/Autonomous_system_%28Internet%29">Wikipedia: Autonomous System</a><br>
