--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -270,6 +270,12 @@
 	      <i>Optional further reading:</i><br>
 	    <td>
 	  </tr>
+	  <tr>
+	    <td>2/10
+	    <td>Discussion: Assignment 5<br>
+	    <td><a href=slides/discussion_slides/week_6_discussion.pdf>Discussion Slides</a><br>
+	    <td><a href="pa/pa5.html">Assignment 5 available</a>
+	  </tr>
 
 	  <tr>
 	    <td>2/11
@@ -307,6 +313,12 @@
 	      <a href="http://www.cs.princeton.edu/courses/archive/spring10/cos433/lec13new.pdf">Basic number theory</a> lecture notes from Boaz Barak<br>
 	      <a href="https://www.cis.upenn.edu/~nadiah/courses/cis800-02-f13/readings/diffie-hellman.pdf">New Directions in Cryptography</a> by Whitfield Diffie and Martin E. Hellman
 	    <td>
+	  </tr>
+	  <tr>
+	    <td>2/19
+	      <td>
+	      <td>
+	      <td><a href="pa/pa5.html">Assignment 5 due</a>
 	  </tr>
 
 	  <tr>
