add lecture 13 slides

--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -295,7 +295,7 @@
 	  <tr>
 	    <td>2/16
 	    <td>Symmetric cryptography<br>
-	      <br>
+	      <br><a href="slides/13-symmetriccrypto.pdf">Lecture slides</a>
 	    <td>
 	      <a href="https://www.cl.cam.ac.uk/~rja14/Papers/SEv2-c05.pdf">Ch. 5 of Security Engineering</a> by Ross Anderson<br>
 	      <br><i>Optional further reading:</i><br>
