Added week 7 slides

--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -303,6 +303,12 @@
 	    <td>
 	  </tr>
 
+	  <tr>
+	    <td>2/17
+	    <td>Discussion: Assignment 5 Continued<br>
+	    <td><a href=slides/discussion_slides/week_7_discussion.pdf>Discussion Slides</a><br>
+	    <td>
+	  </tr>
 	  
 	  <tr>
 	    <td>2/18
