--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -349,7 +349,7 @@
 	  <tr>
 	    <td>2/25
 	    <td>Authentication and passwords<br>
-
+	      <br><a href="slides/16-authentication.pdf">Lecture slides</a>
 	    <td>
 	    <td>
 	  </tr>
