final exam info

--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -409,7 +409,7 @@
 	  <tr>
 	    <td>3/18
 	    <td>Final Exam
-	    <td>
+	    <td>Will be available between 6pm PDT March 17 and 6pm PDT March 18, and you may take the exam in any 3-hour window that you choose.
 	    <td>
 	      </tr>
 	  
