lecture 19 slides link

--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -392,6 +392,7 @@
 	  <tr>
 	    <td>3/9
 	    <td>Ethics, law, and policy<br>
+	      <br><a href="slides/19-policy.pdf">Lecture slides</a>
 	    <td>
 	      <i>Optional further reading:</i><br>
 	      <a href="http://courses.ischool.berkeley.edu/i205/s10/readings/week11/gavison-privacy.pdf">Privacy and the Limits of Law</a> by Ruth Gavison<br>
