--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Calendar and readings
 ==============================================================
 
 Mon Sept  27 2021: Introduction
-  - [*Old slides*](slides/1-introduction.pdf)
+  - [*Slides*](slides/1-introduction.pdf)
   - *Read*: [This World of Ours](https://www.usenix.org/system/files/1401_08-12_mickens.pdf) by James Mickens
   - *Watch*: [USENIX Security 2018 Keynote](https://www.usenix.org/conference/usenixsecurity18/presentation/mickens) by James Mickens
   - *Optional*: [EFF write up on Van Buren case](https://www.eff.org/deeplinks/2021/06/van-buren-victory-against-overbroad-interpretations-cfaa-protects-security)
@@ -190,7 +190,7 @@ reinforce your knowledge of the concepts covered in lecture and get you to
 think about security in more depth, beyond what is covered lecture.
 
 You are expected to work on the assignments by yourself. You may discuss the
-assignments with students from the course---in general--but not any specific
+assignments with students from the course---in general---but not any specific
 solution. There are no late days, but you will receive an additional 10% if you
 turn in your assignment by the early date. Specifically, we'll compute each
 assignment grade as:
@@ -239,6 +239,20 @@ re-reading after class as well.
 Asking and answering questions in lecture, on Piazza, or during office hours
 counts towards your class participation. Starting discussions (e.g., around the
 readings) online also counts is encouraged!
+
+Scribe notes (&le; 10%)
+-----------------------
+
+We are working on scribe notes to make up for the lack of a textbook. Groups
+from [Nadia Heninger](https://cseweb.ucsd.edu/~nadiah/)'s CSE 127 (Winter 2021)
+put together the first set of lecture notes. You can earn up to 10% in extra
+credit by contributing to this effort. Since this is extra credit (and you
+would be editing existing text), we expect your contributions to be
+substantial: This means the final text should clear, well-organized, and
+complete.  Take a look at [scribe notes from David Wagner's class at
+Berkeley](https://sp20.cs161.org/assets/notes/MemorySafety.1.24.pdf) for
+motivation. If you are interested in this, form a group and contact the
+instructor.
 
 Academic integrity and student conduct
 ==============================================================
