--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Section:
 Office hours (all on Zoom):
 : **Evan**: Tuesday, 3:00-4:00pm
 
-: **John**: Wednesday, 1:30-2:30pm
+: **John**: Wednesday, 1:30-2:30pm @ Art of Espresso & on Zoom
 
 : **David**: Thursday, 4:00-5:00pm
 
