--- a/cse127-fall21/index.html
+++ b/cse127-fall21/index.html
@@ -67,7 +67,7 @@ Mon Sept  27 2021: Introduction
   - *Optional*: [EFF write up on Van Buren case](https://www.eff.org/deeplinks/2021/06/van-buren-victory-against-overbroad-interpretations-cfaa-protects-security)
 
 Wed Sept 29 2021: Buffer overflow attacks
-  - [*Old slides*](slides/2-bufferoverflows.pdf)
+  - [*Slides*](slides/2-bufferoverflows.pdf)
   - [*GDB buffer overflow notes*](notes/bufferoverflow.html)
   - *Read*: [Smashing the Stack for Fun and Profit](http://phrack.org/issues/49/14.html#article) by Aleph One
   - *Optional:* 0x300-0x320 from [Hacking](https://nostarch.com/hacking2.htm). 0x200-0x270 if you don't have a strong C background.
