--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Wed Sept 29 2021: Buffer overflow attacks
   - *Optional:* 0x300-0x320 from [Hacking](https://nostarch.com/hacking2.htm). 0x200-0x270 if you don't have a strong C background.
   - *Resources mentioned in class:* [Project Zero exploits](https://googleprojectzero.blogspot.com/2020/07/mms-exploit-part-1-introduction-to-qmage.html), [finger daemon](https://minnie.tuhs.org/cgi-bin/utree.pl?file=4.3BSD/usr/src/etc/fingerd.c), [GEF](https://gef.readthedocs.io/en/master/), [Compiler explorer](https://godbolt.org/z/3iFhjy)
 
-Fri Oct  1 2021: PA1: GDB + x86
+Fri Oct  1 2021: [PA1: GDB + x86](pa/pa1.html)
 
 Mon Oct 4 2021: Buffer overflow defenses
   - [*Old slides*](slides/3-lowlevelmitigations.pdf)
