--- a/cse127-fall21/index.html
+++ b/cse127-fall21/index.html
@@ -76,7 +76,7 @@ Wed Sept 29 2021: Buffer overflow attacks
 Fri Oct  1 2021: [PA1: GDB + x86](pa/pa1.html)
 
 Mon Oct 4 2021: Buffer overflow defenses
-  - [*Old slides*](slides/3-lowlevelmitigations.pdf)
+  - [*Slides*](slides/3-lowlevelmitigations.pdf)
   - *Read*: [ASLR](https://pax.grsecurity.net/docs/aslr.txt) and [NOEXEC](https://pax.grsecurity.net/docs/noexec.txt)
 
 Wed Oct 6 2021: Memory (un)safety
