Added pa2 to index and updated due dates

--- a/cse127-fall21/index.html
+++ b/cse127-fall21/index.html
@@ -84,7 +84,7 @@ Wed Oct 6 2021: Memory (un)safety
   - *Read*: [Low-Level Software Security by Example](papers/erlingsson:low.pdf) by Ulfar Erlingsson et al.
   - *Optional*: [The Geometry of Innocent Flesh on the Bone: Return-into-libc without Function Calls (on the x86)](papers/shacham:rop.pdf) by Hovav Shacham, [Hacking Blind](papers/bittau:brop.pdf) by Andrea Bittau et al.,  and [Control-Flow Integrity](papers/abadi:cfi.pdf) by Martin Abadi et al.
 
-Fri Oct  8 2021: PA2: Buffer overflows
+Fri Oct  8 2021: [PA2: Buffer overflows](pa/pa2.html)
 
 Mon Oct 11 2021: More memory (un)safety
   - [*Old slides*](slides/5-heapint.pdf), [*Example code*](notes/heap)
