--- a/cse127-fall21/pa/pa2.html
+++ b/cse127-fall21/pa/pa2.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8"><!-- -*- markdown -*- -->
     **PA 2: Buffer overflows (75 pts + 25pts extra for sploit4)**
 
-**Early Turn-In: Thursday, October 22, 2020 by 11:59:59 PM (10% bonus)**
+**Early Turn-In:** Friday, October 15, 2020 by 17:00:00 PM (10% bonus)
 
-**Hard Deadline: Sunday, October 25, 2020 by 11:59:59 PM Pacific Time**
+**Hard Deadline:** Monday, October 18, 2020 by 17:00:00 PM Pacific Time
 
 The goal of this assignment is to gain hands-on experience with the effects of buffer overflows and other memory-safety bugs.
 
