--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ Mon Oct 4 2021: Buffer overflow defenses
 Wed Oct 6 2021: Memory (un)safety
   - [*Slides*](slides/4-ropcfi.pdf)
   - *Read*: [Low-Level Software Security by Example](papers/erlingsson:low.pdf) by Ulfar Erlingsson et al.
+  - [*return to libc and ROP notes*](notes/rop.html)
   - *Optional*: [The Geometry of Innocent Flesh on the Bone: Return-into-libc without Function Calls (on the x86)](papers/shacham:rop.pdf) by Hovav Shacham, [Hacking Blind](papers/bittau:brop.pdf) by Andrea Bittau et al.,  and [Control-Flow Integrity](papers/abadi:cfi.pdf) by Martin Abadi et al.
 
 Fri Oct  8 2021: [PA2: Buffer overflows](pa/pa2.html)
