--- a/cse127-fall21/index.html
+++ b/cse127-fall21/index.html
@@ -88,7 +88,7 @@ Wed Oct 6 2021: Memory (un)safety
 Fri Oct  8 2021: [PA2: Buffer overflows](pa/pa2.html)
 
 Mon Oct 11 2021: More memory (un)safety
-  - [*Old slides*](slides/5-heapint.pdf), [*Example code*](notes/heap)
+  - [*Slides*](slides/5-heapint.pdf), [*Example code*](notes/heap)
   - *Read*: [Fantastic memory issues and how to fix them](https://educatedguesswork.org/posts/memory-safety/) by Eric Rescorla and [Understanding glibc malloc](https://sploitfun.wordpress.com/2015/02/10/understanding-glibc-malloc/) by sploitfun
   - *Optional*: [Advanced Doug lea's malloc exploits](http://phrack.org/issues/61/6.html) by jp, [Automatic Techniques to Systematically Discover New Heap Exploitation Primitives](https://www.usenix.org/conference/usenixsecurity20/presentation/yun) by Insu Yun et al.
 
