--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Wed Oct 13 2021: Sandboxing and isolation
   - *Read*: [The Road to Less Trusted Code: Lowering the Barrier to In-process Sandboxing](https://cseweb.ucsd.edu/~dstefan/noindex/login2020/) by Garfinkel et al.
   - *Optional*: [Retrofitting Fine Grain Isolation in the Firefox Renderer](https://cseweb.ucsd.edu/~dstefan/pubs/narayan:2020:rlbox.pdf) by Narayan et al., [Operating System Security](http://www.morganclaypool.com/doi/abs/10.2200/S00126ED1V01Y200808SPT001) by Trent Jaeger,  [Android System and kernel security](https://source.android.com/security/overview/kernel-security), and [https://www.apple.com/business/docs/iOS_Security_Guide.pdf](https://www.apple.com/business/docs/iOS_Security_Guide.pdf)
 
-Fri Oct 15 2021: PA3: Library sandboxing
+Fri Oct 15 2021: [PA3: Library sandboxing](pa/pa3.html)
 
 Mon Oct 18 2021: Side channels 
   - [*Old slides*](slides/8-sidechannels.pdf)
