--- a/pa/pa2.html
+++ b/pa/pa2.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8"><!-- -*- markdown -*- -->
     **PA 2: Buffer overflows (75 pts + 25pts extra for sploit4)**
 
-**Early Turn-In:** Friday, October 15, 2021 by 17:00:00 PM (10% bonus)
+**Early Turn-In:** Friday, October 15, 2021 by 17:00:00 (10% bonus)**
 
-**Hard Deadline:** Monday, October 18, 2021 by 17:00:00 PM Pacific Time
+**Hard Deadline:** Monday, October 18, 2021 by 17:00:00**
 
 The goal of this assignment is to gain hands-on experience with the effects of buffer overflows and other memory-safety bugs.
 
