--- a/pa/pa3.html
+++ b/pa/pa3.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8"><!-- -*- markdown -*- -->
     **PA 3: Library sandboxing (100 points)**
 
-**Early Turn-In: Friday, October 22, 2021 by 11:59:59 PM (10% bonus)**
+**Early Turn-In: Friday, October 22, 2021 by 17:00:00 (10% bonus)**
 
-**Hard Deadline: Friday, October 25, 2021 by 11:59:59 PM Pacific Time**
+**Hard Deadline: Friday, October 25, 2021 by 17:00:00**
 
 The goal of this assignment is to gain hands-on experience with library
 sandboxing---and exploiting sandboxed libraries using confused deputy attacks!
