--- a/cse127-fall21/pa/pa1.html
+++ b/cse127-fall21/pa/pa1.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8"><!-- -*- markdown -*- -->
     **PA 1:  GDB + x86 (20 pts)**
 
-**Early turn-in:** Friday, October 8, 2021 by  17:00:00 PDT (10% bonus)
+**Early turn-in:** Friday, October 8, 2021 by  17:00:00 (10% bonus)**
 
-**Hard deadline:** Monday, October 11, 2020 by 17:00:00 PDT
+**Hard deadline:** Monday, October 11, 2020 by 17:00:00**
 
 # Goal
 
