--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Wed Oct 13 2021: Sandboxing and isolation
 Fri Oct 15 2021: [PA3: Library sandboxing](pa/pa3.html)
 
 Mon Oct 18 2021: Side channels 
-  - [*Old slides*](slides/8-sidechannels.pdf)
+  - [*Slides*](slides/7-sidechannels.pdf)
   - *Read*: [Efficient Cache Attacks on AES, and Countermeasures](papers/tromer:cache.pdf) by Eram Tromer et al.
   - *Optional*: [Chapter 19](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch19-7sep.pdf) of Security Engineering
 
