--- a/cse127-fall21/pa/pa4.html
+++ b/cse127-fall21/pa/pa4.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8"><!-- -*- markdown -*- -->
     **PA 4: Side channels (100 points)**
 
-**Early Turn-In: Monday, November 9, 2020 by 11:59:59 PM (10% bonus)**
+**Early Turn-In: Friday, November 5, 2021 by 17:00:00 (10% bonus)**
 
-**Hard Deadline: Wednesday, November 11, 2020 by 11:59:59 PM Pacific Time**
+**Hard Deadline: Monday, November 8, 2021 by 17:00:00**
 
 The goal of this assignment is to gain hands-on experience exploiting side
 channels. This assignment will demonstrate how side channels can be just as
