--- a/cse127-fall21/pa/pa3.html
+++ b/cse127-fall21/pa/pa3.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8"><!-- -*- markdown -*- -->
     **PA 3: Library sandboxing (100 points)**
 
-**Early Turn-In: Friday, October 22, 2021 by 17:00:00 (10% bonus)**
+**Early Turn-In: ~~Friday, October 22~~ Wednesday, October 27, 2021 by 17:00:00 (10% bonus)**
 
-**Hard Deadline: Friday, October 25, 2021 by 17:00:00**
+**Hard Deadline: ~~Monday, October 25~~ Friday, Ocbtober 29, 2021 by 17:00:00**
 
 The goal of this assignment is to gain hands-on experience with library
 sandboxing---and exploiting sandboxed libraries using confused deputy attacks!
