--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Wed Oct 27 2021: Web intro
   - *Read*: [CSRF, XSS, SQLi notes](https://cseweb.ucsd.edu/~dstefan/cse127-winter19/notes/lecture13/), php's [SQL Injection](https://www.php.net/manual/en/security.database.sql-injection.php)
   - *Optional*: [Web technology for developers](https://developer.mozilla.org/en-US/docs/Web), and [Browser Security Handbook: Basic concepts behind web browsers](https://code.google.com/p/browsersec/wiki/Part1)
 
-Fri Oct 29 2021: PA4: Side channels
+Fri Oct 29 2021: [PA4: Side channels](pa/pa4.html)
 
 Mon Nov 1 2021: Web attacks and defenses 
   - [*Old slides*](slides/10-webattacks.pdf)
