--- a/pa/pa5.html
+++ b/pa/pa5.html
@@ -13,7 +13,7 @@ In this assignment, you have 8 'levels' or 'challenges' (each worth 10 points). 
 
 # Getting Started/Logging In
 
-Visit [https://c10-32.sysnet.ucsd.edu/challenges/](https://c10-32.sysnet.ucsd.edu/challenges/). In this page, you will be asked to enter your PID and a password. You can find your password in your Gradescope account for this class (look for the "Assignment 5 userinfo" assignment).
+Visit [https://c10-32.sysnet.ucsd.edu/challenges/](https://c10-32.sysnet.ucsd.edu/challenges/). In this page, you will be asked to enter your PID and a password. You can find your password by going to https://c10-32.sysnet.ucsd.edu/challenges/static/userinfo/A00000000.pdf (replacing A00000000 with your own student ID). If this does not work for you, please leave a message on piazza and we'll resolve the issue.
 
 # A Word of Caution
 
