--- a/cse127-fall21/index.html
+++ b/cse127-fall21/index.html
@@ -131,13 +131,16 @@ Wed Nov 3 2021: Network intro
 Fri Nov  5 2021: PA5: Web security
 
 Mon Nov 8 2021: Network attacks
- - [*Old slides*](slides/13-networkattacks.pdf)
+ - [*Slides*](slides/11-networkattacks.pdf)
  - *Read*: [Security problems in the TCP/IP protocol suite](https://www.cs.columbia.edu/~smb/papers/ipext.pdf) by Steven Bellovin.  And [a look back](https://www.cs.columbia.edu/~smb/papers/acsac-ipext.pdf) at this paper.
  - *Read*: [SAD DNS Explained](https://blog.cloudflare.com/sad-dns-explained/) by Marek Vavruša and Nick Sullivan
+ - *Optional read*: [BGP leaksand cryptocurrencies](https://blog.cloudflare.com/bgp-leaks-and-crypto-currencies/) by Louis Poinsignon.
 
 Wed Nov 10 2021: Network defenses
  - [*Old slides*](slides/14-networkdefenses.pdf)
- - *Read*: [NAT Slipstreaming](https://samy.pl/slipstream/) by Samy Kamkar
+ - *Read*: [NAT Slipstreaming](https://samy.pl/slipstream/) by Samy Kamkar. And,
+ if you haven't read it, [a look
+ back](https://www.cs.columbia.edu/~smb/papers/acsac-ipext.pdf) at this paper.
 
 Fri Nov 12 2021: PA6: Networking
 
