--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Wed Nov 10 2021: Network defenses
 Fri Nov 12 2021: [PA6: Networking](pa/pa6.html)
 
 Mon Nov 15 2021: Symmetric-key crypto
-  - [*Old slides*](slides/15-symmetriccrypto.pdf)
+  - [*Slides*](slides/13-symmetriccrypto.pdf)
   - *Read*: [Chapter 5](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch5-7sep.pdf) (skip 5.2.3, 5.2.5, 5.3.4, 5.3.5, 5.4, 5.7, 5.8) of Security Engineering
   - *Optional*: [Communication Theory of Secrecy Systems](https://archive.org/stream/bstj28-4-656#page/n0/mode/2up) by Shannon
 
