--- a/pa/pa6.html
+++ b/pa/pa6.html
@@ -28,6 +28,14 @@ Linux commands you may need to know about or look up for this assignment, in alp
 
 Certain flags of some of these commands may also come in useful, such as `-F`, `-i`, `-p`, and `-X`, among others. Information can be found on man pages (e.g., `man nc`) or online.
 
+# Submission
+
+You will make 3 different submissions on piazza for this assignment.
+
+- The first submission is the transcript of an email that you will send using `nc`. Your submission should be named `transcript.txt` and should consist of the text that you send/recieve while using `nc`. The autograder will do a sanity test to make sure you have the right format during your submission.
+- The second submission will be named `token.txt` and should contain two lines: the username for foreshadow, and the token you get at the end of the assignment.
+- The last submission is a writeup which explains the steps you took during the assignment. This doesn't have to be anything too fancy; bullet points will work fine.
+
 ---
 
 We hope this assignment will be enjoyable and interesting for you.  In order to preserve the experience for everyone, please be careful with spoilers on Piazza and in class - part of the fun is finding the relevant information and figuring out how you're supposed to use it.  As usual, the TA's will be available in office hours and via private questions on Piazza to provide help and maybe some hints if necessary.
