--- a/pa/pa6.html
+++ b/pa/pa6.html
@@ -33,7 +33,7 @@ Certain flags of some of these commands may also come in useful, such as `-F`, `
 You will make 3 different submissions on piazza for this assignment.
 
 - The first submission is the transcript of an email that you will send using `nc`. Your submission should be named `transcript.txt` and should consist of the text that you send/recieve while using `nc`. The autograder will do a sanity test to make sure you have the right format during your submission.
-- The second submission will be named `token.txt` and should contain two lines: the username for foreshadow, and the token you get at the end of the assignment.
+- The second submission will be named `token.txt` and should contain only the token you get at the end of the assignment.
 - The last submission is a writeup which explains the steps you took during the assignment. This doesn't have to be anything too fancy; bullet points will work fine.
 
 ---
