Typo and clarify submission

--- a/cse127-fall21/pa/pa6.html
+++ b/cse127-fall21/pa/pa6.html
@@ -30,11 +30,11 @@ Certain flags of some of these commands may also come in useful, such as `-F`, `
 
 # Submission
 
-You will make 3 different submissions on piazza for this assignment.
+You will make 3 different submissions on gradescope for this assignment.
 
-- The first submission is the transcript of an email that you will send using `nc`. Your submission should be named `transcript.txt` and should consist of the text that you send/recieve while using `nc`. The autograder will do a sanity test to make sure you have the right format during your submission.
+- The first submission is the transcript of an email that you will send using `nc`. Your submission should be named `transcript.txt` and should consist of the text that you send/recieve while using `nc`. Include everything starting from the command you run to when the command terminates. The autograder will do a sanity test to make sure you have the right format during your submission.
 - The second submission will be named `token.txt` and should contain only the token you get at the end of the assignment.
-- The last submission is a writeup which explains the steps you took during the assignment. This doesn't have to be anything too fancy; bullet points will work fine.
+- The last submission is a writeup (`writeup.txt`) which explains the steps you took during the assignment. This doesn't have to be anything too fancy; bullet points will work fine.
 
 ---
 
