Updated pa8 to be optional

--- a/cse127-fall21/pa/pa8.html
+++ b/cse127-fall21/pa/pa8.html
@@ -5,6 +5,8 @@
 
 **Hard Deadline: Dec 12, 2021 by 11:59:59 PM Pacific Time -- NO Extensions**
 
+**This assignment is optional. It will count as extra credit.**
+
 # Introduction
 
 ## Setup
